feat: Added chat service